# IoT-Home-Security-Door-Lock

./: .gitignore  03 - Requirements and Specification.tex  04 - Design.tex  05 - Development.tex  06 - Verification.tex  09 - Appendix.tex  CMakeLists.txt  KeypadCIS350  README.md  pubspec.yaml  sdkconfig  sdkconfig.old
dart-app/: pubspec.yaml
html/: _r_e_a_d_m_e_8md.html  dir_a15fa5229570ceac87e752ee413e2213.html  globals.html  globals_vars.html  index.html  lock__main_8c.html  md_lock_2_r_e_a_d_m_e.html  menudata.js  namespacemembers.html  namespacemembers_func.html  pages.html  pytest__hello__world_8py.html
html/search/: all_0.js  all_2.js  all_8.js  all_9.js  all_a.js  files_0.js  functions_0.js  functions_1.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  variables_1.js
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
latex/: md__r_e_a_d_m_e.tex
lib/: main.dart
lib/pages/: lock_page.dart
lib/providers/: lock_state_provider.dart  mqtt_provider.dart
lib/router/: app_routes.dart  constants.dart
main/: CMakeLists.txt  constants.h  hello_world_main.c  lcd.c  lcd.h  lock.c  lock.h  lock_main.c
security-lock/: CMakeLists.txt  sdkconfig.ci
security-lock/html/: dir_ed75373b22b1373bc1fcc92418863180.html  files.html  globals_defs.html  globals_func.html  namespacepytest__hello__world.html  namespaces.html
security-lock/main/: CMakeLists.txt  constants.h  lock.h
tex-report/: 00 - Title.tex  01 - Project Information.tex  02 - Project Plan.tex  07 - Post Mortem.tex  08 - References.tex  report.tex
(+20 files in other folders)
